# groonga-token-filter-skip-word

./: .gitignore  Makefile.am  README.md  clean.sh  configure.ac
test/suite/select/skip_word/: offline.actual  offline.test  online.actual  online.test
test/suite/select/skip_word_with_position/: offline.actual  offline.test  online.actual  online.test
test/suite/tokenize/: skip_word.expected  skip_word.test  skip_word_with_position.expected  skip_word_with_position.test
token_filters/: Makefile.am  skip_word.c
